# Client_Pepsico_ontology

./: .gitignore  .pre-commit-config.yaml  MODEL_training and inference_updated.docx  README.md  pyproject.toml
notebooks/: 01-Load-Data.py
pipelines/: cd.yaml  ci.yaml
pipelines/templates/: extract-package-version.yaml
src/: __main__.py  my_module.py
src/backend/: env.example  requirements.txt  start_server.bat
src/backend/app/: config.py  main.py
src/backend/app/api/: models.py
src/backend/app/services/: ai_service.py  anomaly_agent_briefing.py  assistant_context.py  data_loader.py  form_classifier.py  graph_mail.py  nba_constraints.py  nba_ensemble.py  nba_features.py  nba_history.py  nba_service.py  nba_service_xgb.py  notification_mail.py  smtp_mail.py  super_excel_loader.py
src/data/nba/: hyper_parameters.json  nba_feature_importance_best_model.json  nba_holdout_predictions_best_model.csv  nba_hyperparam_sweep_results.csv  nba_training_data.csv  tmp_model.cbm
src/frontend/: .env.development  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css
src/frontend/src/config/: azureConfig.js
src/frontend/src/services/: aiService.js  api.js
src/nba/: MODEL.md  inference.py  inference_main.py  model_functions.py  nba_inference.py  nba_training.py  requirements.txt  run_nba_situation_demo.py
src/nba/examples/: situation_breakdown.json
src/nba/inference/: __init__.py  __main__.py  demo_situation.json  inference.py  requirements.txt
src/nba/model/input/: feature_manifest.json  (+1 more)
tests/: test_ai_recommendations_route.py  test_nba_features.py  test_nba_service.py
(+55 files in other folders)
